Update man 1 candybar

--- a/docs/candybar.1
+++ b/docs/candybar.1
@@ -34,7 +34,7 @@ candybar \- WebKit\-based status bar for tiling window managers
 \fBcandybar\fR [\fB\-c\fR \fIconfig\-file\fR | \fB\-h\fR \fIheight\fR | \fB\-m\fR \fImonitor\fR | \fB\-p\fR \fIposition\fR | \fB\-t\fR \fItheme\-uri\fR]
 .SH "DESCRIPTION"
 .sp
-\fBcandybar\fR displays a HTML\-based statusline in a WebKit web view\&. It provides a smooth looking statusline with CSS transitions and effects, and the possibility of having a transparent background with effects without a desktop compositor running\&.
+\fBcandybar\fR displays a HTML\-based status bar in a WebKit web view\&. It provides a smooth looking status bar with CSS transitions and effects, and the possibility of having a transparent background with effects without a desktop compositor running\&.
 .sp
 Screenshots are available on the candybar wiki\&.
 .SH "OPTIONS"
@@ -49,17 +49,17 @@ and any system\-wide and per\-user configuration files\&. The file must exist an
 .PP
 \fB\-h\fR \fIheight\fR
 .RS 4
-Set the height of the statusline in pixels\&.
+Set the height of the status bar in pixels\&.
 .RE
 .PP
 \fB\-m\fR \fImonitor\fR
 .RS 4
-Define which monitor the statusline appears on\&.
+Define which monitor the status bar appears on\&.
 .RE
 .PP
 \fB\-p\fR \fIposition\fR
 .RS 4
-Set the statusline position\&. Valid options are
+Set the status bar position\&. Valid options are
 \fItop\fR
 and
 \fIbottom\fR\&.
