docs: add mpris widget info to docs

--- a/docs/candybar.5.asciidoc
+++ b/docs/candybar.5.asciidoc
@@ -132,6 +132,11 @@ default: 5000
 
 default: 1000
 
+now_playing_mpris
+^^^^^^^^^^^^^^^^^
+'player_name'::
+    MPRIS player name (e.g. "spotify")
+
 volume
 ^^^^^^
 'card'::
