--- a/docs/candybar.5
+++ b/docs/candybar.5
@@ -2,12 +2,12 @@
 .\"     Title: candybar
 .\"    Author: [see the "Authors" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 04/30/2014
+.\"      Date: 05/02/2014
 .\"    Manual: Candybar Manual
 .\"    Source: candybar
 .\"  Language: English
 .\"
-.TH "CANDYBAR" "5" "04/30/2014" "candybar" "Candybar Manual"
+.TH "CANDYBAR" "5" "05/02/2014" "candybar" "Candybar Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -226,6 +226,20 @@ How often to update in ms
 .RE
 .sp
 default: 1000
+.RE
+.sp
+.it 1 an-trap
+.nr an-no-space-flag 1
+.nr an-break-flag 1
+.br
+.ps +1
+\fBnow_playing_mpris\fR
+.RS 4
+.PP
+\fIplayer_name\fR
+.RS 4
+MPRIS player name (e\&.g\&. "spotify")
+.RE
 .RE
 .sp
 .it 1 an-trap
