docs: add note about desktop list support in i3

--- a/docs/candybar.1
+++ b/docs/candybar.1
@@ -2,12 +2,12 @@
 .\"     Title: candybar
 .\"    Author: [see the "Authors" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 04/30/2014
+.\"      Date: 05/04/2014
 .\"    Manual: Candybar Manual
 .\"    Source: candybar
 .\"  Language: English
 .\"
-.TH "CANDYBAR" "1" "04/30/2014" "candybar" "Candybar Manual"
+.TH "CANDYBAR" "1" "05/04/2014" "candybar" "Candybar Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -85,7 +85,11 @@ supported; requires the dwm built\-in bar to be enabled and set to the same posi
 .PP
 \fBi3\fR
 .RS 4
-supported
+supported; desktop support requires the
+\fIdesktops_i3\fR
+widget to be enabled instead of the default
+\fIdesktops\fR
+widget for desktop list support\&.
 .RE
 .PP
 \fBmonsterwm\fR
