--- a/docs/candybar.1.asciidoc
+++ b/docs/candybar.1.asciidoc
@@ -78,7 +78,7 @@ overrides any system-wide and per-user configuration files, but does not overrid
 Authors
 -------
 
-Kim Silkebækken <kim.silkebaekken@gmail.com>
+Kim Silkebækken <kim@silkebaekken.net>
 
 See https://github.com/Lokaltog/candybar/graphs/contributors for a list of all
 contributors.
