--- a/docs/candybar.5.asciidoc
+++ b/docs/candybar.5.asciidoc
@@ -178,7 +178,7 @@ further details.
 Authors
 -------
 
-Kim Silkebækken <kim.silkebaekken@gmail.com>
+Kim Silkebækken <kim@silkebaekken.net>
 
 See https://github.com/Lokaltog/candybar/graphs/contributors for a list of all
 contributors.
