Update author e-mail address

--- a/docs/candybar.1.asciidoc
+++ b/docs/candybar.1.asciidoc
@@ -80,7 +80,7 @@ overrides any system-wide and per-user configuration files, but does not overrid
 Authors
 -------
 
-Kim Silkebækken <kim@silkebaekken.net>
+Kim Silkebækken <kim@silkebaekken.no>
 
 See https://github.com/Lokaltog/candybar/graphs/contributors for a list of all
 contributors.
