widgets/desktops: Allow hiding empty desktops on desktops widget
Configurable with a "show_empty" configuration option to desktops
widget. Defaults to "true", so if the user does not touch the default
config, the default behaviour is maintained.

Fixes #102
Closes #103

--- a/docs/candybar.5.asciidoc
+++ b/docs/candybar.5.asciidoc
@@ -61,6 +61,16 @@ default: "%H:%M"
 
 default: 10
 
+desktops
+^^^^^^^^^^
+
+Display desktops.
+
+'show_empty'::
+    Display empty desktops. Set to false to hide empty/unselected desktops.
+
+default: true
+
 email_imap
 ^^^^^^^^^^
 
